--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "cloudinary": "^1.22.0",
+    "file-saver": "^2.0.2",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
+    "mic-recorder-to-mp3": "^2.2.1",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.0-alpha.5",
+    "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-mic": "^12.4.6",
+    "react-multimedia-capture": "^1.2.4",
     "react-player": "^2.2.0",
     "react-qr-code": "^1.0.2",
     "react-qr-reader": "^2.2.1",
