--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "cloudinary": "^1.22.0",
+    "cloudinary-core": "^2.8.2",
     "file-saver": "^2.0.2",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
