--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-media-recorder": "^1.2.0",
     "react-mic": "^12.4.6",
     "react-multimedia-capture": "^1.2.4",
     "react-player": "^2.2.0",
