--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "file-saver": "^2.0.2",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
+    "leaflet": "^1.6.0",
     "mic-recorder-to-mp3": "^2.2.1",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.0-alpha.5",
@@ -18,6 +19,7 @@
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-media-recorder": "^1.2.0",
     "react-mic": "^12.4.6",
     "react-multimedia-capture": "^1.2.4",
