--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-REACT_APP_apiKey= "AIzaSyCS5OLd_oH8ULlhSmjZfLENI-NE_EsXEkg"
-REACT_APP_authDomain= "int4-43ffc.firebaseapp.com"
-REACT_APP_databaseURL= "https://int4-43ffc.firebaseio.com"
-REACT_APP_projectId= "int4-43ffc"
-REACT_APP_storageBucket= "int4-43ffc.appspot.com"
-REACT_APP_messagingSenderId= "323622186946"
-REACT_APP_appId= "1:323622186946:web:c85dd16b839ca8886b705b"
+REACT_APP_apiKey= "AIzaSyC0NxEwUoTcVnzL5MEfxJop0xHi8H8NECo"
+REACT_APP_authDomain= "int4-2.firebaseapp.com"
+REACT_APP_databaseURL= "https://int4-2.firebaseio.com"
+REACT_APP_projectId= "int4-2"
+REACT_APP_storageBucket= "int4-2.appspot.com"
+REACT_APP_messagingSenderId= "287972119090"
+REACT_APP_appId= "1:287972119090:web:9f221d2915a4b6c493222b"
 REACT_APP_measurementId= ""
 CLOUDINARY_URL=cloudinary://212861344353933:F-TVHSfBpJXvrvu1H8sdn64l4P4@int4
