--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
 script: 
   - echo "Deploying!"
 install:
-  - yarn add firebase-tools
+  - npm install -g firebase-tools
 after_succes:
   - firebase deploy --token $FIREBASE_TOKEN
