--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-compound-timer": "^1.2.0",
+    "react-countdown": "^2.2.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
     "react-media-recorder": "^1.2.0",
     "react-mic": "^12.4.6",
     "react-multimedia-capture": "^1.2.4",
+    "react-numeric-input": "^2.2.3",
     "react-player": "^2.2.0",
     "react-qr-code": "^1.0.2",
     "react-qr-reader": "^2.2.1",
