fix registerform achternaam

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-countdown": "^2.2.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
+    "react-map-interaction": "^2.0.0",
     "react-media-recorder": "^1.2.0",
     "react-mic": "^12.4.6",
     "react-multimedia-capture": "^1.2.4",
